# motormongo

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  logging.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: CODEOWNERS  cd.yaml  ci.yaml  update-rtd.yaml
demo/: logging.yaml  main.py
demo/models/documents/: user.py  user_details.py
demo/models/requests/: user.py  user_details.py
docs/: requirements.txt
docs/source/: aggregation.md  conf.py  crud_classmethods.md  crud_instance_methods.md  fast_api_integration.md  fields.md  index.md  index.rst  polymorphism_and_inheritance.md  pooling_configuration.md  quickstart.md  why_motormongo.md
example/: main.py
example/models/documents/: user.py  user_details.py
example/models/requests/: user.py
metrics/: locustfile.py
metrics/mongoengine/: main.py
metrics/motormongo/: main.py
motormongo/: __init__.py
motormongo/abstracts/: __init__.py  base_document.py  document.py  embedded_document.py
motormongo/abstracts/exceptions/: __init__.py  document.py
motormongo/fields/: __init__.py  binary_field.py  boolean_field.py  datetime_field.py  embedded_document_field.py  enum_field.py  field.py  float_field.py  geojson_field.py  geopoint_field.py  integer_field.py  list_field.py  reference_field.py  string_field.py
motormongo/fields/exceptions/: __init__.py  binary_field.py  boolean_field.py  datetime_field.py  embedded_document_field.py  enum_field.py  float_field.py  geojson_field.py  integer_field.py  list_field.py  reference_field.py  string_field.py
motormongo/mongo/: __init__.py  database.py
motormongo/utils/: formatter.py  logging.py  odm_init.py
tests/: __init__.py  conftest.py
tests/abstracts/: document_test.py  test_aggregate.py  test_complex.py  test_document.py  test_finds.py  test_inserts.py  test_other.py  test_polymorphism.py  test_updates.py
tests/fields/: test_binary_field.py  test_boolean_field.py  test_datetime_field.py  test_embedded_document_field.py  test_enum_field.py  test_float_field.py  test_geojson_field.py  test_integer_field.py  test_list_field.py  test_reference_field.py  test_string_field.py
tests/test_documents/: items.py  reference.py  user.py
