[tool.poetry]
name = "motormongo"
version = "0.1.0-alpha"
description = "An asynchronous Object Document Mapper (O.D.M) for MongoDB built on-top of Motor."
authors = ["pprunty <pprunty@tcd.ie>"]
readme = "README.md"
license = "MIT"
include = [
    "motormongo/*.py",
    "motormongo/*/*.py",
]

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.2"

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["all"], version = "^0.104.1"}
bcrypt = "^4.0.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
