[tool.poetry]
name = "motormongo"
version = "0.1.12"
description = "An asynchronous Object Document Mapper (ODM) for MongoDB built on top of Motor."
authors = ["pprunty <pprunty@tcd.ie>"]
readme = "README.md"
license = "MIT"
include = [
    "motormongo/*.py",
    "motormongo/*/*.py",
]

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.2"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["all"], version = ">=0.104.1,<0.110.0"}
bcrypt = "^4.0.1"
pytest = "^8.0.1"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.23.0"
colored = "^2.2.4"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
colorlog = "^6.8.0"
locust = "^2.23.1"
mongoengine = "^0.27.0"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
